# general_strike_tweet_analysis

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
data/: dataset_twitter-scraper-lite_2025-10-20_00-39-28-235-2.json  dataset_twitter-scraper-lite_2025-10-28_22-12-48-721.json
src/: streamlit_app.py
