[project]
name = "twitter-search-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apify-client>=1.12.2",
    "beautifulsoup4>=4.14.2",
    "polars>=1.34.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.2.1",
]
